# DY_MIDAS_PROJECT

./: .env.default  .gitignore  BACKLOG.md  CLAUDE.md  README.md  ROADMAP.md  get_project_info.py  gmaps.env  pyproject.toml  render.yaml  test.py  test_beam_force.py
.claude/: DY_MIDAS_PROJECT_midas-gen_개선방향.md  RESTRUCTURE_NOTES.md  registry.yaml
.claude/agents/: beam-design-reviewer.md
.claude/commands/: convert-api.md  export-results.md  run-workflow.md  sort-data.md  validate-config.md
.claude/rules/: kds_code.md
.claude/skills/: member-naming.md  midas_api_json.md  seismic.md
.cursor/rules/: kds-code.mdc
.github/workflows/: ci.yml  release.yml
MIDAS_API/: __init__.py  _analysis.py  _beam_force.py  _client.py  _element.py  _floor_assign.py  _floorload.py  _loadCaseDB.py  _loads.py  _midas_api.py  _node.py  _proectDB.py  _project.py  _projectDB.py  _section.py  _staticloads.py  _to_excel.py
backend/: access_log.py  auth_middleware.py  backend.spec  db.py  dependencies.py  exceptions.py  main.py  requirements.txt  work_dir.py
backend/data/: [별지 제1호서식] 구조안전 및 내진설계 확인서(6층 이상의 건축물)(건축물의 구조기준 등에 관한 규칙).hwpx  [별지 제2호서식] 구조안전 및 내진설계 확인서(5층 이하의 건축물 등)(건축물의 구조기준 등에 관한 규칙).hwpx  _test_output.xlsx  floor_load_template.xlsx  floor_loads.json  kds_live_loads.csv  rc_beam_rebars.json
codedoc/: README.md
docs/: SSO_MIGRATION.md  Setting_Static_Load_Case.md
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: AGENTS.md  next.config.ts  package-lock.json  package.json
scripts/: build-all.ps1  claude_assets_lint.py
(+149 files in other folders)
